--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,31 @@
     <link rel="stylesheet" href="style.css">
     <title> Mems Pizza home</title>
 </head>
+
 <body>
+    <nav class="navbar navbar-inverse bg-dark">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Mems Pizza home</a>
+            </div>
+            <div class="collapse navbar-collapse bg-dark" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="#">About</a></li>
+                    <li class="active"><a href="#">Menu</a></li>
+                    <li class="active"><a href="#">Contact</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container-fluid">
-        
+        <img src="images/pizza 1.png" alt="" class="img-fluid " >
     </div>
 
 
@@ -20,6 +43,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
 </body>
+
 </html>
