center align all items on the first div

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
-        <img src="images/pizza 1.png" alt="" class="img-fluid " >
+    <div class="container-fluid " style="text-align: center;">
+        <h1 class="my-4" style="text-align: center; font-size: 4em;" >MEMS PIZZA HOME</h1>
+        <img src="images/pizza 1.png" alt="" class="img-fluid" >
     </div>
 
 
