create the about us div

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <img src="images/pizza 1.png" alt="" class="img-fluid" >
     </div>
 
+    <div class="container-fluid">
+        <h1 class="my-4" style="text-align: center; font-size: 3em;" >AB<span class="underline">OUT </span>US</h1>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
