add about us content

--- a/index.html
+++ b/index.html
@@ -38,8 +38,17 @@
         <img src="images/pizza 1.png" alt="" class="img-fluid" >
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid my-4">
         <h1 class="my-4" style="text-align: center; font-size: 3em;" >AB<span class="underline">OUT </span>US</h1>
+        <div class="container-fluid row col-md-10" style="text-align: center;">
+            <div class="img col-md-6">
+                <img src="images/pizza emoji.png" alt="" class="img-fluid" >
+            </div>
+            <div class="content col-md-6">
+                <p style="font-size: 1.5em;" >Mems pizza home is a restaurant that makes tasty pizzas and allows clients to order for the pizza of their choice online by selecting the specific pizza that they want and adding it onto the cart then upon checkout to choose whether they want delivery or not.</p>
+            </div>
+            
+        </div>
     </div>
 
 
