remove unnecessary code

--- a/index.html
+++ b/index.html
@@ -33,19 +33,17 @@
         </div>
     </nav>
 
-    <div class="container-fluid " style="text-align: center;">
+    <div class="container-fluid my-5 " style="text-align: center;">
         <h1 class="my-4" style="text-align: center; font-size: 4em;" >MEMS PIZZA HOME</h1>
         <img src="images/pizza 1.png" alt="" class="img-fluid" >
     </div>
 
-    <div class="container-fluid my-4">
+    <div class="container-fluid my-5 py-5">
         <h1 class="my-4" style="text-align: center; font-size: 3em;" >AB<span class="underline">OUT </span>US</h1>
-        <div class="container-fluid row col-md-10" style="text-align: center;">
-            <div class="img col-md-6">
-                <img src="images/pizza emoji.png" alt="" class="img-fluid" >
-            </div>
-            <div class="content col-md-6">
-                <p style="font-size: 1.5em;" >Mems pizza home is a restaurant that makes tasty pizzas and allows clients to order for the pizza of their choice online by selecting the specific pizza that they want and adding it onto the cart then upon checkout to choose whether they want delivery or not.</p>
+        <div class="container-fluid col-md-10 "  style="text-align: center;">
+            <div class="content py-2 ">
+                <p style="font-size: 1.5em; line-height: 150%; letter-spacing: 3px; " >Mems pizza home is a pizza spot that makes  eight different types of tasty pizzas and allows customers to order for the pizza of their choice online by selecting the specific pizza that they want and adding it onto the cart then upon checkout on the cart, to choose whether they want delivery or not. Let's get you some tasty pizzas , shall we ?!</p>
+                <img src="images/pizza emoji.png" alt="" height="100" >
             </div>
             
         </div>
