add the peperoni pizza card

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
     </div>
 
     <div class="container-fluid">
-        <h1 class="my-4" style="text-align: center; font-size: 3em;" >OU<span class="underline">R ME </span>NU</h1>
+        <h1 class="my-4" style="text-align: center; font-size: 3em;" >OU<span class="underline">R ME</span>NU</h1>
+
+        <div class="card" style="width: 25rem;">
+            <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+            <div class="card-body" style="text-align: center;" >
+              <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+              <p  style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green pepper.</p>
+              <a href="#" class="btn btn-danger">Order here</a>
+            </div>
+          </div>
     </div>
 
 
