add the other seven types of pizza

--- a/index.html
+++ b/index.html
@@ -34,32 +34,108 @@
     </nav>
 
     <div class="container-fluid my-5 " style="text-align: center;">
-        <h1 class="my-4" style="text-align: center; font-size: 4em;" >MEMS PIZZA HOME</h1>
-        <img src="images/pizza 1.png" alt="" class="img-fluid" >
+        <h1 class="my-4" style="text-align: center; font-size: 4em;">MEMS PIZZA HOME</h1>
+        <img src="images/pizza 1.png" alt="" class="img-fluid">
     </div>
 
     <div class="container-fluid my-5 py-5">
-        <h1 class="my-4" style="text-align: center; font-size: 3em;" >AB<span class="underline">OUT </span>US</h1>
-        <div class="container-fluid col-md-10 "  style="text-align: center;">
+        <h1 class="my-4" style="text-align: center; font-size: 3em;">AB<span class="underline">OUT </span>US</h1>
+        <div class="container-fluid col-md-10 " style="text-align: center;">
             <div class="content py-2 ">
-                <p style="font-size: 1.5em; line-height: 150%; letter-spacing: 3px; " >Mems pizza home is a pizza spot that makes  eight different types of tasty pizzas and allows customers to order for the pizza of their choice online by selecting the specific pizza that they want and adding it onto the cart then upon checkout on the cart, to choose whether they want delivery or not. Let's get you some tasty pizzas , shall we ?!</p>
-                <img src="images/pizza emoji.png" alt="" height="100" >
+                <p style="font-size: 1.5em; line-height: 150%; letter-spacing: 3px; ">Mems pizza home is a pizza spot
+                    that makes eight different types of tasty pizzas and allows customers to order for the pizza of
+                    their choice online by selecting the specific pizza that they want and adding it onto the cart then
+                    upon checkout on the cart, to choose whether they want delivery or not. Let's get you some tasty
+                    pizzas , shall we ?!</p>
+                <img src="images/pizza emoji.png" alt="" height="100">
             </div>
-            
+
         </div>
     </div>
 
     <div class="container-fluid">
-        <h1 class="my-4" style="text-align: center; font-size: 3em;" >OU<span class="underline">R ME</span>NU</h1>
-
-        <div class="card" style="width: 25rem;">
-            <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
-            <div class="card-body" style="text-align: center;" >
-              <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-              <p  style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green pepper.</p>
-              <a href="#" class="btn btn-danger">Order here</a>
+        <h1 class="my-4" style="text-align: center; font-size: 3em;">OU<span class="underline">R ME</span>NU</h1>
+        <div class="row ps-4">
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
             </div>
-          </div>
+
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/boerewors.png" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+
+            <div class="card m-3" style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+
+            <div class="card m-3 " style="width: 25rem;">
+                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
+                        pepper.</p>
+                    <a href="#" class="btn btn-danger">Order here</a>
+                </div>
+            </div>
+        </div>
     </div>
 
 
