--- a/index.html
+++ b/index.html
@@ -62,77 +62,70 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
                     <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
                         pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3" style="width: 25rem;">
                 <img src="images/boerewors.png" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">Boerewors pizza</h2>
+                    <p style="color: black;" class="card-text"> 100% beef mince , fresh tomatoes , fresh onions ,jalapenno, chilli.</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/veggie tikka.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">Veggie tikka</h2>
+                    <p style="color: black;" class="card-text">  sweetcorn , red and green pepper , mushroom , onion , jalapenos, tikka sauce</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/margeritta.jpeg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">Margheritta pizza</h2>
+                    <p style="color: black;" class="card-text">  basil, fresh mozzarella, and tomatoes , cheese.</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/barbecue.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">BBQ chicken</h2>
+                    <p style="color: black;" class="card-text"> succulent bbq chicken , macon , sweetcorn,onion.</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/cheeseburger.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">Cheese Pizza</h2>
+                    <p style="color: black;" class="card-text"> 100% beef mince , real cheddar , cheese , fresh onion , creamy mayo.</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3" style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/buratta.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">Buratta pizza</h2>
+                    <p style="color: black;" class="card-text"> Whole wheat pizza , pesto sauce, burrata cheese , cherry tomatoes.</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
 
             <div class="card m-3 " style="width: 25rem;">
-                <img src="images/pepperoni.jpg" class="card-img-top" alt="...">
+                <img src="images/hawaiian.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
-                    <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
-                    <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
-                        pepper.</p>
-                    <a href="#" class="btn btn-danger">Order here</a>
+                    <h2 style="color: black; text-align: center;" class="card-title">Hawaiian pizza</h2>
+                    <p style="color: black;" class="card-text">  macon , pineapple, ham , canadian bacon, pizza crust , marinara sauce</p>
+                    <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
         </div>
