create the contact us div

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid mt-4 ">
         <h1 class="my-4" style="text-align: center; font-size: 3em;">OU<span class="underline">R ME</span>NU</h1>
         <div class="row ps-4">
             <div class="card m-3" style="width: 25rem;">
@@ -131,6 +131,9 @@
         </div>
     </div>
 
+    <div class="container-fluid mt-5 pt-5">
+        <h1 class="my-4" style="text-align: center; font-size: 3em;">CON<span class="underline">TACT</span> US</h1>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
