--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <img src="images/boerewors.png" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Boerewors pizza</h2>
-                    <p style="color: black;" class="card-text"> 100% beef mince , fresh tomatoes , fresh onions ,jalapenno, chilli.</p>
+                    <p style="color: black;" class="card-text"> 100% beef mince , fresh tomatoes , fresh onions
+                        ,jalapenno, chilli.</p>
                     <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
@@ -79,7 +80,8 @@
                 <img src="images/veggie tikka.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Veggie tikka</h2>
-                    <p style="color: black;" class="card-text">  sweetcorn , red and green pepper , mushroom , onion , jalapenos, tikka sauce</p>
+                    <p style="color: black;" class="card-text"> sweetcorn , red and green pepper , mushroom , onion ,
+                        jalapenos, tikka sauce</p>
                     <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
@@ -88,7 +90,7 @@
                 <img src="images/margeritta.jpeg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Margheritta pizza</h2>
-                    <p style="color: black;" class="card-text">  basil, fresh mozzarella, and tomatoes , cheese.</p>
+                    <p style="color: black;" class="card-text"> basil, fresh mozzarella, and tomatoes , cheese.</p>
                     <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
@@ -106,7 +108,8 @@
                 <img src="images/cheeseburger.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Cheese Pizza</h2>
-                    <p style="color: black;" class="card-text"> 100% beef mince , real cheddar , cheese , fresh onion , creamy mayo.</p>
+                    <p style="color: black;" class="card-text"> 100% beef mince , real cheddar , cheese , fresh onion ,
+                        creamy mayo.</p>
                     <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
@@ -115,7 +118,8 @@
                 <img src="images/buratta.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Buratta pizza</h2>
-                    <p style="color: black;" class="card-text"> Whole wheat pizza , pesto sauce, burrata cheese , cherry tomatoes.</p>
+                    <p style="color: black;" class="card-text"> Whole wheat pizza , pesto sauce, burrata cheese , cherry
+                        tomatoes.</p>
                     <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
@@ -124,15 +128,40 @@
                 <img src="images/hawaiian.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Hawaiian pizza</h2>
-                    <p style="color: black;" class="card-text">  macon , pineapple, ham , canadian bacon, pizza crust , marinara sauce</p>
+                    <p style="color: black;" class="card-text"> macon , pineapple, ham , canadian bacon, pizza crust ,
+                        marinara sauce</p>
                     <a href="#" class="btn btn-danger">Order Now</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid mt-5 pt-5">
+    <div class="container-fluid mt-5 pt-5"  >
         <h1 class="my-4" style="text-align: center; font-size: 3em;">CON<span class="underline">TACT</span> US</h1>
+
+        <form target="_blank" class="col-md-8"  >
+
+            <div class="row">
+                <div class="form-group  my-3">
+                    <label for="inputName" style="font-size: 2em;" >Name </label>
+                    <input type="text" class="form-control" id="inputName" placeholder="Name" value="" required>
+                </div>
+                <div class="form-group my-3">
+                    <label for="inputEmail" style="font-size: 2em;">Email </label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" value="" required>
+                </div>
+
+
+                <div class="form-group my-3">
+                    <label for="inputMessage" style="font-size: 2em;">Message</label>
+                    <input type="text" class="form-control" id="inputMessage" placeholder="Message"
+                        value="" required>
+                </div>
+                <div style="padding-left: 46%;" class="col-auto my-3 ">
+                    <button type="submit" class="btn btn-danger mb-2" id="btn">Submit</button>
+                </div>
+            </div>
+        </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
