--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
     <div class="container-fluid mt-5 pt-5"  >
         <h1 class="my-4" style="text-align: center; font-size: 3em;">CON<span class="underline">TACT</span> US</h1>
 
-        <form target="_blank" class="col-md-8"  >
+        <form target="_blank" class="col-md-8 " style="padding-left: 10%;"  >
 
-            <div class="row">
+            <div class="row p-4 ">
                 <div class="form-group  my-3">
                     <label for="inputName" style="font-size: 2em;" >Name </label>
                     <input type="text" class="form-control" id="inputName" placeholder="Name" value="" required>
@@ -164,6 +164,7 @@
         </form>
     </div>
 
+    <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
