add lnks to the footer

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-5 pt-5"  >
+    <div class="container-fluid mt-5 pt-5">
         <h1 class="my-4" style="text-align: center; font-size: 3em;">CON<span class="underline">TACT</span> US</h1>
 
-        <form target="_blank" class="col-md-8 " style="padding-left: 10%;"  >
+        <form target="_blank" class="col-md-8 " style="padding-left: 10%;">
 
             <div class="row p-4 ">
                 <div class="form-group  my-3">
-                    <label for="inputName" style="font-size: 2em;" >Name </label>
+                    <label for="inputName" style="font-size: 2em;">Name </label>
                     <input type="text" class="form-control" id="inputName" placeholder="Name" value="" required>
                 </div>
                 <div class="form-group my-3">
@@ -154,8 +154,7 @@
 
                 <div class="form-group my-3">
                     <label for="inputMessage" style="font-size: 2em;">Message</label>
-                    <input type="text" class="form-control" id="inputMessage" placeholder="Message"
-                        value="" required>
+                    <input type="text" class="form-control" id="inputMessage" placeholder="Message" value="" required>
                 </div>
                 <div style="padding-left: 46%;" class="col-auto my-3 ">
                     <button type="submit" class="btn btn-danger mb-2" id="btn">Submit</button>
@@ -164,7 +163,47 @@
         </form>
     </div>
 
-    <footer></footer>
+    <footer class="bg-primary text-white text-center text-lg-start">
+
+        <div class="container p-4">
+
+            <div class="row">
+
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <p>
+                        Thank you for choosing MEMS PIZZA HOME ! Looking forward to serving you again.
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2020 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        </div>
+
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
