change the footer background color

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </form>
     </div>
 
-    <footer class="bg-primary text-white text-center text-lg-start">
+    <footer class="bg-dark text-white text-center text-lg-start">
 
         <div class="container p-4">
 
@@ -176,20 +176,20 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">Navigation</h5>
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
+                            <a href="#Home" class="text-white">Home</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 2</a>
+                            <a href="#!" class="text-white">About us</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 3</a>
+                            <a href="#!" class="text-white">Menu</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            <a href="#!" class="text-white">Contact us</a>
                         </li>
                     </ul>
                 </div>
