create a new file pepperoni.html and peperoni.css

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2020 Copyright:
-            <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+            <a class="text-white" href="https://mdbootstrap.com/">memorywabwile@gmail.com</a>
         </div>
 
     </footer>
