--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
             <div class="collapse navbar-collapse bg-dark" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li class="active"><a href="#">About</a></li>
-                    <li class="active"><a href="#">Menu</a></li>
-                    <li class="active"><a href="#">Contact</a></li>
+                    <li class="active"><a href="#Home">Home</a></li>
+                    <li class="active"><a href="#About">About</a></li>
+                    <li class="active"><a href="#Menu">Menu</a></li>
+                    <li class="active"><a href="#Contact">Contact</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -38,7 +38,7 @@
         <img src="images/pizza 1.png" alt="" class="img-fluid">
     </div>
 
-    <div class="container-fluid my-5 py-5">
+    <div class="container-fluid my-5 py-5" id="About">
         <h1 class="my-4" style="text-align: center; font-size: 3em;">AB<span class="underline">OUT </span>US</h1>
         <div class="container-fluid col-md-10 " style="text-align: center;">
             <div class="content py-2 ">
@@ -62,7 +62,7 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Pepperoni pizza</h2>
                     <p style="color: black;" class="card-text"> succulent bbq chicken , beef peperoni, mushroom, green
                         pepper.</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -183,13 +183,13 @@
                             <a href="#Home" class="text-white">Home</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">About us</a>
+                            <a href="#About" class="text-white">About us</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Menu</a>
+                            <a href="#Menu" class="text-white">Menu</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Contact us</a>
+                            <a href="#Contact" class="text-white">Contact us</a>
                         </li>
                     </ul>
                 </div>
