--- a/pepperoni.html
+++ b/pepperoni.html
@@ -7,6 +7,11 @@
     <title>pepperoni pizza</title>
 </head>
 <body>
-    
+    <select class="form-select" aria-label="Default select example">
+        <option selected>Open this select menu</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
 </body>
 </html>
