add price on the pizza

--- a/pepperoni.html
+++ b/pepperoni.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>pepperoni pizza</title>
 </head>
+
 <body>
+
     <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
+        <option selected>select the type of pizza</option>
+        <option value="1">Pepperoni</option>
+        <option value="2">Boerewors</option>
+        <option value="3">Veggie tikka</option>
+        <option value="3">Margheritta pizza</option>
+        <option value="3">BBQ chicken</option>
+        <option value="3">Cheese Pizza</option>
+        <option value="3">Buratta Pizza</option>
+        <option value="3">Hawaiian Pizza</option>
+    </select>
+
+    <select class="form-select" aria-label="Default select example">
+        <option selected>Choose the size of pizza</option>
+        <option value="1">Small</option>
+        <option value="2">Medium</option>
+        <option value="3">Large</option>
+    </select>
+
+    <select class="form-select" aria-label="Default select example">
+        <option selected>Choose the crust of your choice</option>
+        <option value="1">Crispy @Ksh.100</option>
+        <option value="2">Stuffed @Ksh.150</option>
+        <option value="3">Glutten-free @Ksh.200</option>
+    </select>
+
+    <select class="form-select" aria-label="Default select example">
+        <option selected>Sausage for small pizza @50</option>
+        <option value="2">Mushroom for small pizza @50</option>
+        <option value="3">Gorgonzola for small pizza @50</option>
+        <option value="1"></option>
+        <option value="1">Sausage for medium pizza @100</option>
+        <option value="2">Mushroom for medium pizza @100</option>
+        <option value="3">Gorgonzola for medium pizza @100</option>
+        <option value="1"></option>
+        <option value="1">Sausage for large pizza @150</option>
+        <option value="2">Mushroom for large pizza @150</option>
+        <option value="3">Gorgonzola for large pizza @150</option>
+
+    </select>
+
+   
+
 </body>
+
 </html>
