craete the select form

--- a/pepperoni.html
+++ b/pepperoni.html
@@ -10,50 +10,62 @@
 </head>
 
 <body>
+    <div class="text-center ">
+        <form class="col-sm-6 offset-sm-3 text-center">
+            <div class="col-md-8 form-group" >
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>select the type of pizza</option>
+                    <option value="pepperoni">Pepperoni</option>
+                    <option value="Boerewors">Boerewors</option>
+                    <option value="Veggie tikka">Veggie tikka</option>
+                    <option value="Margheritta">Margheritta pizza</option>
+                    <option value="BBQ chicken">BBQ chicken</option>
+                    <option value="Cheese Pizza">Cheese Pizza</option>
+                    <option value="Burrata Pizza">Buratta Pizza</option>
+                    <option value="Hawaiian Pizza">Hawaiian Pizza</option>
+                </select>
+            </div>
 
-    <select class="form-select" aria-label="Default select example">
-        <option selected>select the type of pizza</option>
-        <option value="1">Pepperoni</option>
-        <option value="2">Boerewors</option>
-        <option value="3">Veggie tikka</option>
-        <option value="3">Margheritta pizza</option>
-        <option value="3">BBQ chicken</option>
-        <option value="3">Cheese Pizza</option>
-        <option value="3">Buratta Pizza</option>
-        <option value="3">Hawaiian Pizza</option>
-    </select>
+            <div class="col-md-8 form-group">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Choose the size of pizza</option>
+                    <option value="Small">Small</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Large">Large</option>
+                </select>
+            </div>
 
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Choose the size of pizza</option>
-        <option value="1">Small</option>
-        <option value="2">Medium</option>
-        <option value="3">Large</option>
-    </select>
+            <div class="col-md-8 form-group">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Choose the crust of your choice</option>
+                    <option value="1">Crispy @Ksh.100</option>
+                    <option value="2">Stuffed @Ksh.150</option>
+                    <option value="3">Glutten-free @Ksh.200</option>
+                </select>
+            </div>
 
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Choose the crust of your choice</option>
-        <option value="1">Crispy @Ksh.100</option>
-        <option value="2">Stuffed @Ksh.150</option>
-        <option value="3">Glutten-free @Ksh.200</option>
-    </select>
+            <div class="col-md-8 form-group" >
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Sausage for small pizza @Ksh. 50</option>
+                    <option value="2">Mushroom for small pizza @Ksh. 50</option>
+                    <option value="3">Gorgonzola for small pizza @Ksh. 50</option>
+                    <option value="1"></option>
+                    <option value="1">Sausage for medium pizza @Ksh. 100</option>
+                    <option value="2">Mushroom for medium pizza @Ksh. 100</option>
+                    <option value="3">Gorgonzola for medium pizza @Ksh. 100</option>
+                    <option value="1"></option>
+                    <option value="1">Sausage for large pizza @Ksh. 150</option>
+                    <option value="2">Mushroom for large pizza @Ksh. 150</option>
+                    <option value="3">Gorgonzola for large pizza @Ksh. 150</option>
 
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Sausage for small pizza @50</option>
-        <option value="2">Mushroom for small pizza @50</option>
-        <option value="3">Gorgonzola for small pizza @50</option>
-        <option value="1"></option>
-        <option value="1">Sausage for medium pizza @100</option>
-        <option value="2">Mushroom for medium pizza @100</option>
-        <option value="3">Gorgonzola for medium pizza @100</option>
-        <option value="1"></option>
-        <option value="1">Sausage for large pizza @150</option>
-        <option value="2">Mushroom for large pizza @150</option>
-        <option value="3">Gorgonzola for large pizza @150</option>
+                </select>
+            </div>
+        </form>
 
-    </select>
-
-   
-
+        <a href="#">
+            <button type="submit" class="btn btn-success checkout" id="checkout">Add to cart</button>
+        </a>
+    </div>
 </body>
 
 </html>
