--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title> Mems Pizza home</title>
+    <link rel="shortcut icon" sizes="250x250" href="images/pizzalogo.jpg" type="image/x-icon" />
 </head>
 
 <body>
