--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
 <body>
     <nav class="navbar navbar-inverse bg-dark">
-        <div class="container-fluid">
+        <div class="container-fluid" id="Home">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Mems Pizza home</a>
+                <h1>Mems Pizza home</h1>
             </div>
-            <div class="collapse navbar-collapse bg-dark" id="myNavbar">
+            <div class=" bg-dark" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#Home">Home</a></li>
-                    <li class="active"><a href="#About">About</a></li>
-                    <li class="active"><a href="#Menu">Menu</a></li>
-                    <li class="active"><a href="#Contact">Contact</a></li>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Menu">Menu</a></li>
+                    <li><a href="#Contact">Contact</a></li>
 
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <!-- <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </nav>
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-4 ">
+    <div class="container-fluid mt-4 " id="Menu">
         <h1 class="my-4" style="text-align: center; font-size: 3em;">OU<span class="underline">R ME</span>NU</h1>
         <div class="row ps-4">
             <div class="card m-3" style="width: 25rem;">
@@ -73,7 +73,7 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Boerewors pizza</h2>
                     <p style="color: black;" class="card-text"> 100% beef mince , fresh tomatoes , fresh onions
                         ,jalapenno, chilli.</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -83,7 +83,7 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Veggie tikka</h2>
                     <p style="color: black;" class="card-text"> sweetcorn , red and green pepper , mushroom , onion ,
                         jalapenos, tikka sauce</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">Margheritta pizza</h2>
                     <p style="color: black;" class="card-text"> basil, fresh mozzarella, and tomatoes , cheese.</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
                 <div class="card-body" style="text-align: center;">
                     <h2 style="color: black; text-align: center;" class="card-title">BBQ chicken</h2>
                     <p style="color: black;" class="card-text"> succulent bbq chicken , macon , sweetcorn,onion.</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Cheese Pizza</h2>
                     <p style="color: black;" class="card-text"> 100% beef mince , real cheddar , cheese , fresh onion ,
                         creamy mayo.</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Buratta pizza</h2>
                     <p style="color: black;" class="card-text"> Whole wheat pizza , pesto sauce, burrata cheese , cherry
                         tomatoes.</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
 
@@ -131,13 +131,13 @@
                     <h2 style="color: black; text-align: center;" class="card-title">Hawaiian pizza</h2>
                     <p style="color: black;" class="card-text"> macon , pineapple, ham , canadian bacon, pizza crust ,
                         marinara sauce</p>
-                    <a href="#" class="btn btn-danger">Order Now</a>
+                    <a href="pepperoni.html" class="btn btn-danger" target="_blank">Order Now</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid mt-5 pt-5">
+    <div class="container-fluid mt-5 pt-5" id="Contact">
         <h1 class="my-4" style="text-align: center; font-size: 3em;">CON<span class="underline">TACT</span> US</h1>
 
         <form target="_blank" class="col-md-8 " style="padding-left: 10%;">
